# formrecap-lora-classifier

./: .env.example  .env.op  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
data/real/: test.jsonl
docs/: LINKEDIN_POST.md  blog-draft.md
docs/results/: calibration-mistral-7b-cf.json  calibration-mistral-7b-nodora.json  calibration.json  detailed-gemma-2b-nodora.json  results-all-models.json  results-baseline-1b.json  results-baseline-3b.json  results-gemma-2b-cf.json  results-gemma-2b-nodora.json  results-gemma-2b.json
docs/results/manifests/: baseline-3b.json  gemma-2b-cf.json  gemma-2b-nodora.json  mistral-7b-cf.json
scripts/: download_adapter.py  generate_charts.py  hand_label.py  push_to_hub.py  upload_data.py  verify_day1.py
serving/cf/pages/public/: app.js  index.html  styles.css
serving/cf/pages/public/architecture/: index.html
serving/cf/pages/public/models/: index.html
serving/cf/pages/public/results/: index.html  results.js
serving/cf/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
serving/cf/worker/src/: hmac.ts  index.ts  validate.ts
serving/cf/worker/test/: hmac.test.ts  validate.test.ts
src/formrecap_lora/data/: assemble.py  dedupe.py  generate.py  preprocessor.py  primers.py  splits.py
src/formrecap_lora/eval/: baselines.py  calibration.py  judge.py  metrics.py  runner.py  runner_vllm.py
tests/: test_calibration.py  test_dedupe.py  test_metrics.py  test_preprocessor.py  test_splits.py
training/: config.py  modal_app.py  vllm_serve.py
(+2 files in other folders)
