[project]
name = "formrecap-lora-classifier"
version = "0.1.0"
description = "LoRA fine-tuned classifiers for form abandonment detection"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Jason Matthew" }]

dependencies = [
    "modal>=0.64",
    "anthropic>=0.40",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "pydantic>=2.8",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "openai>=2.32.0",
    "huggingface_hub>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formrecap_lora"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
